# superset-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: claude_desktop.json
superset_mcp/: client.py  server.py
superset_mcp/tools/: charts.py  dashboards.py  databases.py  datasets.py  sql.py
